# 1024takehome

./: .gitignore  ANCHOR_EVENT_SUPPORT.md  GEYSER_KAFKA_TOPICS.md  IMPLEMENTATION_RESULTS.md  KAFKA_CLICKHOUSE_DESIGN.md  KAFKA_VIEWER_README.md  KAFKA_VIEWER_USAGE.md  README.md  calculate_discriminator.py  clickhouse-init.sql  complete_demo.sh  event_pb2.py  list_topics.sh  test_kafka_viewer.sh  validator-keypair.json  view_kafka.sh  view_kafka_data.py  view_topic.sh  view_topic_tail.sh
geyser-test-program/: .gitignore  Anchor.toml  README.md  demo.ts  deploy.sh  package.json  run_tests.sh  start_validator_with_geyser.sh  test_plugin.sh  validator-keypair.json
geyser-test-program/programs/geyser-test-program/: Cargo.toml
geyser-test-program/programs/geyser-test-program/src/: lib.rs
geyser-test-program/tests/: geyser-test.ts
lp_module/: .dockerignore  Dockerfile  README.md  docker-compose.yml
lp_module/lp-staking/: .gitignore  Anchor.toml  auto-test.ts  package-lock.json  package.json
lp_module/lp-staking/docs/: 01_流动性池与质押挖矿模块_整体设计文档.md  02_Docker开发环境使用文档.md  03_研发计划与开发指南.md  04_Anchor项目结构与代码说明.md  05_Solana和Anchor开发环境安装指南.md  06_开发进度报告_Phase1完成.md  07_快速参考手册.md  08_Phase2_Deposit_Withdraw实现总结.md  09_Phase2_测试报告.md  09_手动测试快速指南.md  10_Phase3_手动测试指南.md  11_Phase3_测试总结.md  12_奖励计算异常问题分析.md  13_PDA_Seeds完整清单.md  (+1 more)
lp_module/scripts/: dev.sh  setup-dev-env.sh
proto/: event_pb2.py
redpanda-quickstart/docker-compose/: docker-compose.yml
zk-bridge/: Dockerfile  README.md
zk-bridge/scripts/: docker-build.sh  run-dev.sh  run-verify.sh  verify_install.sh
(+23 files in other folders)
