[package]
name = "geyser-test-program"
version = "0.1.0"
description = "Test program for Geyser Kafka Plugin"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "geyser_test_program"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.30.1"
base64 = "0.21"
